NTR: display privacy note checkbox

--- a/src/Resources/views/storefront/component/checkout/offcanvas-cart.html.twig
+++ b/src/Resources/views/storefront/component/checkout/offcanvas-cart.html.twig
@@ -5,7 +5,14 @@
     {{ parent() }}
     {% if page.cart.lineItems|length > 0 %}
 
-        {% if mollie_applepaydirect_enabled and ('offcanvas' not in mollie_applepaydirect_restrictions) %}
+        {% set applePayVisible = mollie_applepaydirect_enabled and ('offcanvas' not in mollie_applepaydirect_restrictions) %}
+        {% set paypalExpressVisible =  mollie_paypalexpress_enabled and ('offcanvas' not in mollie_paypalexpress_restrictions) %}
+        {% set noticeVisible = applePayVisible or paypalExpressVisible %}
+
+        {% sw_include '@MolliePayments/mollie/component/express-privacy-notice.html.twig' with {visible:noticeVisible} %}
+
+
+        {% if applePayVisible %}
             {% block component_offcanvas_cart_actions_checkout_apple_direct_component %}
                 <div class="mt-2 js-apple-pay-container mollie-apple-pay-direct-offcanvas">
                     {% include '@MolliePayments/mollie/component/apple-pay-direct-button.twig' %}
@@ -13,13 +20,11 @@
             {% endblock %}
         {% endif %}
 
-        {% if mollie_paypalexpress_enabled and ('offcanvas' not in mollie_paypalexpress_restrictions) %}
+        {% if paypalExpressVisible %}
             {% block component_offcanvas_cart_actions_checkout_mollie_paypal_express_component %}
-                <form id="molliePayPalExpressOffcanvasForm" action="{{ path('frontend.mollie.paypal-express.start', {   }) }}" method="GET" >
-                    <div class="mt-2 justify-content-end">
-                        {% include '@MolliePayments/mollie/component/paypal-express-button.twig' %}
-                    </div>
-                </form>
+                <div class="mt-2 justify-content-end">
+                    {% include '@MolliePayments/mollie/component/paypal-express-button.twig' %}
+                </div>
             {% endblock %}
         {% endif %}
 
