--- a/src/Resources/views/storefront/page/checkout/address/index.html.twig
+++ b/src/Resources/views/storefront/page/checkout/address/index.html.twig
@@ -4,13 +4,17 @@
 
     {{ parent() }}
 
-    {% if mollie_paypalexpress_enabled and ('register' not in mollie_paypalexpress_restrictions) %}
+
+    {% set paypalExpressVisible =  mollie_paypalexpress_enabled and ('register' not in mollie_paypalexpress_restrictions) %}
+    {% set noticeVisible = applePayVisible or paypalExpressVisible %}
+
+    {% sw_include '@MolliePayments/mollie/component/express-privacy-notice.html.twig' with {visible:paypalExpressVisible} %}
+
+    {% if paypalExpressVisible %}
         {% block page_checkout_address_mollie_paypal_express_component %}
-            <form id="molliePayPalExpressRegisterForm" action="{{ path('frontend.mollie.paypal-express.start', {   }) }}" method="GET">
-                <div class="mt-3 mb-3">
-                    {% include '@MolliePayments/mollie/component/paypal-express-button.twig' with {cols: 'col-5'} %}
-                </div>
-            </form>
+            <div class="mt-3 mb-3">
+                {% include '@MolliePayments/mollie/component/paypal-express-button.twig' with {cols: 'col-5'} %}
+            </div>
         {% endblock %}
     {% endif %}
 {% endblock %}
