NTR: refactored JS

--- a/src/Resources/views/mollie/component/paypal-express-button.twig
+++ b/src/Resources/views/mollie/component/paypal-express-button.twig
@@ -32,7 +32,7 @@
     {% endif %}
 
     <div class="{{ cols }}">
-        <button name="paypal-express" class="mollie-paypal-button mollie-express-button paypal-button-{{ shape }} paypal-theme-{{ theme }}">
+        <button name="paypal-express" class="mollie-paypal-button mollie-express-button paypal-button-{{ shape }} paypal-theme-{{ theme }}" data-form-action="{{ path('frontend.mollie.paypal-express.start') }}">
             <img src="{{ image }}" width="80px;"/>
             <p style="font-weight: 100;margin:0;margin-left:8px">Checkout</p>
         </button>
