--- a/src/Resources/app/storefront/src/scss/display.scss
+++ b/src/Resources/app/storefront/src/scss/display.scss
@@ -1,4 +1,5 @@
 /* stylelint-disable selector-id-pattern, declaration-no-important */
+.mollie-express-button.d-none,
 .js-apple-pay .d-none,
 .js-apple-pay-container .d-none,
 .mollie-pos-terminals .d-none,
