--- a/src/Resources/views/storefront/component/checkout/offcanvas-cart.html.twig
+++ b/src/Resources/views/storefront/component/checkout/offcanvas-cart.html.twig
@@ -22,7 +22,7 @@
 
         {% if paypalExpressVisible %}
             {% block component_offcanvas_cart_actions_checkout_mollie_paypal_express_component %}
-                <div class="mt-2 justify-content-end">
+                <div class="mt-2 justify-content-end mollie-paypal-express-offcanvas">
                     {% include '@MolliePayments/mollie/component/paypal-express-button.twig' %}
                 </div>
             {% endblock %}
