--- a/src/Resources/views/storefront/page/checkout/cart/index.html.twig
+++ b/src/Resources/views/storefront/page/checkout/cart/index.html.twig
@@ -39,7 +39,7 @@
 
     {% if paypalExpressVisible %}
         {% block page_checkout_aside_actions_mollie_paypal_express_component %}
-            <div class="mt-2">
+            <div class="mt-2 mollie-paypal-express-cart">
                 {% include '@MolliePayments/mollie/component/paypal-express-button.twig' %}
             </div>
         {% endblock %}
