NTR: refactor apple pay

--- a/src/Resources/app/storefront/src/scss/display.scss
+++ b/src/Resources/app/storefront/src/scss/display.scss
@@ -8,5 +8,7 @@
 #mollieCreditCardMandateDeleteSuccess .d-none,
 .mollie-ideal-issuer .d-none {
     display: none !important;
+    margin: 0 !important;
+    padding: 0 !important;
 }
 /* stylelint-enable selector-id-pattern, declaration-no-important */
