--- a/src/Resources/views/mollie/head.html.twig
+++ b/src/Resources/views/mollie/head.html.twig
@@ -6,7 +6,8 @@
         'frontend.checkout.cart.page' : 'cart',
         'frontend.navigation.page' : 'plp',
         'frontend.account.edit-order.page' : '',
-        'frontend.detail.page' : 'pdp'
+        'frontend.detail.page' : 'pdp',
+        'frontend.checkout.register.page' : 'register'
     } %}
 
     {% set currentRoute = app.request.attributes.get('_route') %}
