NTR: some changes
- added loader to the button
- button cannot be triggered multiple times
- show PPE only if added to saleschannel
- add error after failed payment

--- a/src/Resources/app/storefront/src/scss/base.scss
+++ b/src/Resources/app/storefront/src/scss/base.scss
@@ -5,4 +5,5 @@
 @import "./account/subscriptions";
 @import "./component/credit-card-mandate";
 @import "./component/paypal-express-button";
+@import "./component/express-button";
 @import "./display";
