--- a/src/Resources/views/mollie/component/paypal-express-button.twig
+++ b/src/Resources/views/mollie/component/paypal-express-button.twig
@@ -35,6 +35,9 @@
         <button name="paypal-express" class="mollie-paypal-button mollie-express-button paypal-button-{{ shape }} paypal-theme-{{ theme }}" data-form-action="{{ path('frontend.mollie.paypal-express.start') }}">
             <img src="{{ image }}" width="80px;"/>
             <p style="font-weight: 100;margin:0;margin-left:8px">Checkout</p>
+            <div class="loader">
+
+            </div>
         </button>
     </div>
 {% endblock %}
