NTR: fix pipeline

--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-section-info/mollie-pluginconfig-section-info.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-section-info/mollie-pluginconfig-section-info.html.twig
@@ -33,12 +33,12 @@
         </div>
     </div>
     <div class="col-right">
-        <sw-button class="btn-action" link="https://github.com/mollie/Shopware6/wiki">
-            <sw-icon name="default-documentation-file"></sw-icon>
+        <sw-button class="btn-action" href="https://github.com/mollie/Shopware6/wiki">
+            <sw-icon name="regular-file"></sw-icon>
             {{ $tc('mollie-payments.config.info.btnDocumentation') }}
         </sw-button>
         <sw-button class="btn-action" @click="openSupport">
-            <sw-icon name="default-communication-envelope"></sw-icon>
+            <sw-icon name="regular-envelope"></sw-icon>
             {{ $tc('mollie-payments.config.info.btnRequestSupport') }}
         </sw-button>
         <mollie-external-link class="link-troubleshooting"
