NTR: try to fix pipeline

--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-section-api/mollie-pluginconfig-section-api.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-section-api/mollie-pluginconfig-section-api.html.twig
@@ -2,8 +2,8 @@
     <sw-button @click="onTestButtonClicked" ref="testApiButton">
         {{ $tc('mollie-payments.config.api.testButton') }}
     </sw-button>
-    <mollie-external-link class="mollie-pluginconfig-payments-link-limits"
+    <sw-external-link class="mollie-pluginconfig-payments-link-limits"
                       href="https://www.mollie.com/dashboard/developers/api-keys">
         {{ $tc('mollie-payments.config.api.apiLinkButton') }}
-    </mollie-external-link>
+    </sw-external-link>
 </sw-container>
