--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-section-payments/mollie-pluginconfig-section-payments.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-section-payments/mollie-pluginconfig-section-payments.html.twig
@@ -6,10 +6,10 @@
         {{ $tc('mollie-payments.config.payments.updatePaymentMethods.button') }}
     </sw-button>
 
-    <mollie-external-link
+    <sw-external-link
             class="mollie-pluginconfig-payments-link-limits"
             href="https://help.mollie.com/hc/en-us/articles/115000667365-What-is-the-minimum-and-maximum-amount-per-payment-method-">
         {{ $tc('mollie-payments.config.payments.mollieLimits.link') }}
-    </mollie-external-link>
+    </sw-external-link>
 
 </sw-container>
