--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-section-payments-format/mollie-pluginconfig-section-payments-format.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-section-payments-format/mollie-pluginconfig-section-payments-format.html.twig
@@ -1,6 +1,8 @@
-<sw-container v-if="isVisible" gap="0px" columns="1fr" class="mollie-pluginconfig-payments-format-preview">
-    <label class="mollie-pluginconfig-payments-format-text">
+<sw-container gap="0px" columns="1fr" class="mollie-pluginconfig-payments-format-preview">
+
+    <div class="mollie-pluginconfig-payments-format-text">
         <strong>{{ $tc('mollie-payments.config.payments.format.placeholder') }}</strong>: {ordernumber}, {customernumber}<br/>
         <strong>{{ $tc('mollie-payments.config.payments.format.preview') }}</strong>: "{{ sample1 }}", "{{ sample2 }}", ...
-    </label>
+    </div>
+
 </sw-container>
