--- a/src/Resources/app/storefront/src/mollie-payments/plugins/creditcard-components.plugin.scss
+++ b/src/Resources/app/storefront/src/mollie-payments/plugins/creditcard-components.plugin.scss
@@ -1,77 +1,90 @@
 .mollie-components-credit-card {
-  max-width: 465px;
+    max-width: 465px;
 }
+
 .mollie-components-credit-card label {
-  display: block;
-  font-weight: bold;
-  margin-top: 10px;
+    display: block;
+    font-weight: bold;
+    margin-top: 10px;
 }
+
 .mollie-components-credit-card .block-group {
-  display: block;
-  position: relative;
+    display: block;
+    position: relative;
 }
-.mollie-components-credit-card .block-group:after {
-  clear: both;
-  content: "";
-  display: block;
+
+.mollie-components-credit-card .block-group::after {
+    clear: both;
+    content: "";
+    display: block;
 }
+
 .mollie-components-credit-card .block-group .b1 {
-  width: 48%;
-  float: left;
-  position: relative;
+    width: 48%;
+    float: left;
+    position: relative;
 }
+
 .mollie-components-credit-card .block-group .b2 {
-  width: 48%;
-  float: right;
+    width: 48%;
+    float: right;
 }
+
 .mollie-components-credit-card .intro-text {
-  margin-top: 10px;
+    margin-top: 10px;
 }
+
 .mollie-components-credit-card .tag-line {
-  margin-top: 10px;
+    margin-top: 10px;
 }
+
 .mollie-components-credit-card .tag-line .logo {
-  display: inline-block;
-  margin-top: -8px;
-  max-width: 50px;
+    display: inline-block;
+    margin-top: -8px;
+    max-width: 50px;
 }
+
 .mollie-components-credit-card .error-message {
-  color: #ff233a;
-  margin-bottom: 5px;
+    color: #ff233a;
+    margin-bottom: 5px;
 }
+
 .mollie-components-credit-card .input--field.mollie {
-  border-radius: 3px;
-  min-height: 34px;
-  margin-bottom: 5px;
-  background: #fff;
-  color: #262626;
-  text-align: left;
-  box-shadow: inset 0 0 0 0 transparent, 0 1px 1px 0 rgba(0,0,0,0.1), 0 1px 3px 0 rgba(0,0,0,0.1), 0 0 0 1px rgba(0,0,0,0.05);
-  transition: all 0.05s ease;
+    border-radius: 3px;
+    min-height: 34px;
+    margin-bottom: 5px;
+    background: #fff;
+    color: #262626;
+    text-align: left;
+    box-shadow: inset 0 0 0 0 transparent, 0 1px 1px 0 rgb(0 0 0 / 10%), 0 1px 3px 0 rgb(0 0 0 / 10%), 0 0 0 1px rgb(0 0 0 / 5%);
+    transition: all 0.05s ease;
 }
+
 .mollie-components-credit-card .input--field.mollie.is-focused {
-  box-shadow: inset 0 0 0 2px #07f, 0 1px 1px 0 rgba(0,0,0,0.1), 0 2px 6px 0 rgba(0,0,0,0.1), 0 0 0 1px rgba(0,0,0,0.05);
+    box-shadow: inset 0 0 0 2px #07f, 0 1px 1px 0 rgb(0 0 0 / 10%), 0 2px 6px 0 rgb(0 0 0 / 10%), 0 0 0 1px rgb(0 0 0 / 5%);
 }
+
 .mollie-components-credit-card .input--field.mollie.error {
-  background-color: #fff0f0;
-  box-shadow: 0 0 0 1px #f33, 0 1px 1px 0 rgba(0,0,0,0.1), 0 2px 6px 0 rgba(0,0,0,0.1), 0 0 0 1px rgba(0,0,0,0.05);
+    background-color: #fff0f0;
+    box-shadow: 0 0 0 1px #f33, 0 1px 1px 0 rgb(0 0 0 / 10%), 0 2px 6px 0 rgb(0 0 0 / 10%), 0 0 0 1px rgb(0 0 0 / 5%);
 }
+
 .mollie-components-credit-card .input--field.mollie:active {
-  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.1), 0 2px 6px 0 rgba(0,0,0,0.1), 0 0 0 1px rgba(0,0,0,0.05);
-  border: 2px solid #07f;
+    box-shadow: 0 1px 1px 0 rgb(0 0 0 / 10%), 0 2px 6px 0 rgb(0 0 0 / 10%), 0 0 0 1px rgb(0 0 0 / 5%);
+    border: 2px solid #07f;
 }
-.mollie-components-credit-card .block-group .mollie-credit-card-custom-checkbox  {
-  label{
-    font-weight: 400;
-  }
 
-  .custom-control-label::before {
-    @include border-radius(5px);
-  }
-
-  .custom-control-input:checked ~ .custom-control-label {
-    &::after {
-     // background-image: $custom-checkbox-indicator-icon-checked;
+.mollie-components-credit-card .block-group .mollie-credit-card-custom-checkbox {
+    label {
+        font-weight: 400;
     }
-  }
+
+    .custom-control-label::before {
+        @include border-radius(5px);
+    }
+
+    .custom-control-input:checked ~ .custom-control-label {
+        &::after {
+        }
+    }
 }
