NTR: fix broken admin support form buttons

--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-support-modal/mollie-pluginconfig-support-modal.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-support-modal/mollie-pluginconfig-support-modal.html.twig
@@ -72,12 +72,12 @@
                 <sw-loader v-if="isLoading"></sw-loader>
             </sw-description-list>
 
-            <sw-button class="btn-action" link="https://github.com/mollie/Shopware6/wiki">
+            <sw-button class="btn-action mollie-btn-action-custom" link="https://github.com/mollie/Shopware6/wiki">
                 <sw-icon name="default-documentation-file"></sw-icon>
                 {{ $tc('mollie-payments.config.info.btnDocumentation') }}
             </sw-button>
 
-            <sw-button class="btn-action" link="https://github.com/mollie/Shopware6/wiki/Support">
+            <sw-button class="btn-action mollie-btn-action-custom" link="https://github.com/mollie/Shopware6/wiki/Support">
                 <sw-icon name="default-communication-speech-bubbles"></sw-icon>
                 {{ $tc('mollie-payments.config.support.btnSupport') }}
             </sw-button>
