NTR: fix broken toggle button in account subscription view

--- a/src/Resources/views/storefront/page/account/subscriptions/index.html.twig
+++ b/src/Resources/views/storefront/page/account/subscriptions/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block page_account_main_content %}
     {% block page_account_mollie_subscriptions %}
-        <div class="account-mollie-subscriptions">
+        <div class="account-mollie-subscriptions" data-mollie-template-account-subscriptions>
 
             {% block page_account_mollie_subscriptions_welcome %}
                 <div class="account-welcome">
