--- a/src/Resources/views/storefront/page/account/subscriptions/subscription-item.html.twig
+++ b/src/Resources/views/storefront/page/account/subscriptions/subscription-item.html.twig
@@ -277,8 +277,8 @@
                                     aria-expanded="false"
                                     aria-controls="collapseExample">
                                 {% block page_account_subscription_item_subscription_table_body_cell_toggle_subscription_details_button_text %}
-                                    <span class="subscription-hide-btn-text">{{ "molliePayments.subscriptions.account.orderActionHide"|trans|sw_sanitize }}</span>
                                     <span class="subscription-view-btn-text">{{ "molliePayments.subscriptions.account.orderActionView"|trans|sw_sanitize }}</span>
+                                    <span class="subscription-hide-btn-text d-none">{{ "molliePayments.subscriptions.account.orderActionHide"|trans|sw_sanitize }}</span>
                                 {% endblock %}
                             </button>
                         </div>
